--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-chat",
-  "description": "A Vue.js project",
-  "author": "coffcer",
+  "name": "im-web-vue",
+  "description": "",
+  "author": "liushengjie",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
